docs/clink.css
body {
    padding-top: 3em;
    width: 90%;
    margin: 0 auto;
    font-family: Calibri, Arial, Helvetica, sans-serif;
}

h1 {
    width: 100%;
    border-bottom: 2px black solid;
}

h3 { font-size: 1.21em; }
h4 { font-size: 1.14em; }
h5 { font-size: 1.07em; }
h6 { font-size: 1.00em; }

blockquote {
    display: block;
    padding: 1px 20px 1px 20px;
    margin: 0 0 20px;
    box-shadow: 2px 2px 8px #ccc;
    border-left-style: solid;
    border-left-width: 8px;
    border-left-color: #990000;
    border-right-style: solid;
    border-right-width: 2px;
    border-right-color: #990000;
    background: #ffffee;
}

code {
    display: inline;
    padding: 1px 3px 1px 3px;
    background-color: #eee;
    border: 1px solid #ddd;
    border-radius: 3px;
    white-space: nowrap;
}

pre {
    font-family: monospace;
    margin: 0 10px 0 10px;
}

pre code {
    border: none;
    padding: 0 0 0 0;
    border-radius: 0;
    white-space: normal;
}

kbd {
    padding:0.1em 0.3em;
    border-collapse:separate;
    border:1px solid #ccc;
    font:70% SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
    background-color:#f8f8f8;
    color:#333;
    -moz-box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 0px #ffffff inset;
    -webkit-box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 0px #ffffff inset;
    box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 0px #ffffff inset;
    -moz-border-radius:0.45em;
    -webkit-border-radius:0.45em;
    border-radius:0.45em;
    display:inline-block;
    margin:0 0.1em;
    vertical-align:middle;
    white-space:nowrap;
}

#content td:nth-child(1) {
    white-space: nowrap;
}

#content td:nth-child(1) code {
    border: none;
    padding: 0 0 0 0;
    border-radius: 0;
    background-color: transparent;
}

.section {
    margin-top: 2em;
    margin-bottom: 4em;
}

#header {
    float: right;
    text-align: right;
}

#header #title {
    font-size: 2em;
    font-weight: bold;
    margin-bottom: 0.4em;
}

#content {
    clear: both;
}

#content table {
    margin: 0 auto;
    width: 90%;
}

#content pre, #api .show {
    padding: 0.2em;
    background-color: #eee;
}

#content td, #content th {
    vertical-align: text-top;
    padding: 0.2em 0.5em;
}

#content th {
    background-color: #eee;
}

#content tr:nth-child(odd) {
    background-color: #f8f8f8;
}

#content tr:nth-child(even) {
    background-color: #fff;
}

#content hr {
    width: 66%;
}

#content #api .show {
    white-space: pre;
    font-family: monospace;
}

#content #api .group {
    margin-bottom: 1em;
}

#content #api .function {
}

#content #api .body {
    margin-left: 1em;
}

#content #api .header .name {
    font-weight: bold;
    float: left;
    width: 40%;
}

#content #api .header .signature {
    text-align: right;
}

#content #api .group_name {
    font-size: 1.1em;
    font-weight: bold;
}

#content #api .function {
    margin-left: 2em;
    margin-bottom: 1.0em;
}

#content #api .show {
    white-space: pre;
    font-family: monospace;
}

